src/App.css
html, body {
  height: 100%;
  overflow: hidden;
  background-image: url("assets/images/koi.png");
}

#root {
  height: 100vh;
}

@media screen and (max-width: 600px) {
  html {
    height: fit-content;
    overflow-y: auto;
  }

  body {
    position: relative;
    height: fit-content;
  }

  #root {
    height: fit-content;
    margin-bottom: 10vh;
  }
}

